ref: regras eslint
Co-authored-by: marcelomrad <marcelomrad@users.noreply.github.com>

--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -48,6 +48,15 @@
                 "afterColon": true
             }
         ],
+        "array-bracket-spacing": [
+            "error",
+            "never"
+        ],
+        "block-spacing": [
+            "error",
+            "always"
+        ],
+        "no-undef": "off",
         "no-trailing-spaces": "error"
     }
 }
