--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,15 @@
   "description": "gabarito para o trainee 2022/2",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.21.0",
-    "eslint-plugin-react": "^7.30.1"
+    "eslint-plugin-react": "^7.30.1",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
