ref: updatePassword e .env

--- a/api/.env
+++ b/api/.env
@@ -6,4 +6,4 @@ DB_HOST='162.241.62.176'
 SECRET_KEY = 'mysecretkey' #secret key deveria ter no minimo 32 caracteres
 NODE_ENV = 'development'
 JWT_EXPIRATION='15d'
-APP_URL='http://localhost:3000'
+CLIENT_URL='http://localhost:3000'
